# go_vs_rust_reverse_proxy_benchmark

./: LICENSE  README.md  atrium.yaml  nginx_default.conf  test.sh  test_atrium.sh
actix_backend/src/: main.rs
axum_proxy/: Cargo.toml
axum_proxy/src/: main.rs
go_proxy/: go.mod  main.go
