[package]
name = "axum_proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", branch = "master" }
lazy_static = "1.4.0"